--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="manifest" href="/manifest.webmanifest" />
+    <link rel="manifest" href="/currency-converter/assets/manifest-BPSMV_JD.webmanifest" />
     <meta name="theme-color" content="#007bff" />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/currency-converter/assets/image-HW5BcVMT.png" />
